# pywebrtc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  build.sh  main.py
core/: CMakeLists.txt  connection.cpp  datachannel.cpp  main.cpp  main.py  signaling.py  websocket_server.py
include/: .libwebrtc.h.swo  libwebrtc.h
signaling/: color_logging.py  signaling.py  websocket_client.py
src/: libwebrtc.cpp  main.py  pybind.cpp
